trying to fix img size on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,9 +89,9 @@ code {
   }
   img {
     aspect-ratio: 1;
-    max-width: 80vw;
+    width: 80vw;
     @media screen and (min-width: 480px) {
-      max-width: 20vw;
+      width: 20vw;
     }
   }
 }
